src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <formula>IF(
   ISPICKVAL(Status, &apos;Completed&apos;), (TODAY()- DATEVALUE(CompletedDateTime)),
IF(
    ActivityDate &gt; TODAY(), 0,
IF(
    ActivityDate &lt; TODAY(), (TODAY()- ActivityDate), 0))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Scheduled Visit</fullName>
                </value>
                <value>
                    <fullName>Unreachable</fullName>
                </value>
                <value>
                    <fullName>Other – Remove from List</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drop__c</fullName>
        <label>Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date_Time__c</fullName>
        <label>Due Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metro_Region__c</fullName>
        <label>Metro Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specialist</label>
        <referenceTo>Specialist__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XO_Clinic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XO Clinic</label>
        <referenceTo>Clinic__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <inlineHelpText>Indicates that this record was created by Cirrus Insight.</inlineHelpText>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Clicked__c</fullName>
        <inlineHelpText>First time a link in this email was opened.</inlineHelpText>
        <label>First Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Opened__c</fullName>
        <inlineHelpText>The date this email was first opened by one of the recipients.</inlineHelpText>
        <label>First Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Reply__c</fullName>
        <inlineHelpText>The date this email was first replied to by one of the recipients.</inlineHelpText>
        <label>First Reply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Clicks__c</fullName>
        <inlineHelpText>Number of times links in this email were opened.</inlineHelpText>
        <label># of Clicks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Opens__c</fullName>
        <inlineHelpText>Number of times this tracked email has been opened.</inlineHelpText>
        <label># of Opens</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Replies__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times this email has been replied to.</inlineHelpText>
        <label># of Replies</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Outcome__c</fullName>
        <inlineHelpText>The outcome selected as part of a Cirrus Insight Flight.</inlineHelpText>
        <label>Outcome</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Template_Name__c</fullName>
        <inlineHelpText>The email template used.</inlineHelpText>
        <label>Template Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__isTracked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that opens of this email will be tracked and reported by Cirrus Insight.</inlineHelpText>
        <label>Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Id__c</fullName>
        <externalId>true</externalId>
        <label>Smart Email Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Message_Id__c</fullName>
        <externalId>true</externalId>
        <label>Smart Email Message Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Recipient__c</fullName>
        <inlineHelpText>The recipient of the email.</inlineHelpText>
        <label>Smart Email Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Status__c</fullName>
        <label>Smart Email Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>